--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "12"
+    "node": "10"
   },
   "main": "lib/index.js",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "firebase": "^7.19.1",
+    "firebase": "^7.21.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
+    "mongodb": "^3.6.2",
     "nodemailer": "^6.4.11"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.5.27",
     "@types/nodemailer": "^6.4.0",
     "firebase-functions-test": "^0.2.0",
     "tslint": "^5.12.0",
