--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest -c jest.json"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/jest": "^26.0.14",
     "dotenv": "^8.2.0",
-    "firebase": "^7.21.0",
+    "firebase": "^7.22.0",
     "firebase-admin": "^8.10.0",
     "firebase-functions": "^3.6.1",
     "mongodb": "^3.6.2",
@@ -23,6 +25,7 @@
     "@types/mongodb": "^3.5.27",
     "@types/nodemailer": "^6.4.0",
     "firebase-functions-test": "^0.2.0",
+    "jest": "^26.4.2",
     "tslint": "^5.20.1",
     "typescript": "^4.0.2"
   },
