--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   "devDependencies": {
     "@types/mongodb": "^3.5.27",
     "@types/nodemailer": "^6.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
     "firebase-functions-test": "^0.2.0",
     "jest": "^26.4.2",
     "tslint": "^5.20.1",
