--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "test": "jest -c jest.json --watch"
+    "test": "jest -c jest.json "
   },
   "main": "lib/index.js",
   "dependencies": {
