--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 # Typescript v1 declaration files
 typings/
 
-node_modules/
+node_modules*/
 lib/
 key.json
 
@@ -20,3 +20,5 @@ data/
 docker/
 package-lock.json
 *drawio
+not.txt
+branches.txt
